CREATE TABLE "envelopes" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(100) NOT NULL,
  "description" text,
  total_amount_usd money NOT NULL CHECK (total_amount_usd > '$0'),
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "envelopes_audit" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "operation" varchar(50) NOT NULL,
  "envelope_id" int NOT NULL REFERENCES envelopes(id),
  "envelope_name" varchar(100) NOT NULL,
  "envelope_description" text,
  envelope_total_amount_usd money NOT NULL,
  "changed_by" varchar(255) NOT NULL,
  "changed_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "expenses" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "envelope_id" int NOT NULL REFERENCES "envelopes" ("id"),
  "description" varchar(255) NOT NULL,
  amount_usd money NOT NULL CHECK (amount_usd > '$0'),
  "created_at" timestamp DEFAULT (now())
);

CREATE TABLE "expenses_audit" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "operation" varchar(50) NOT NULL,
  "expense_id" int NOT NULL REFERENCES expenses(id),
  "envelope_id" int NOT NULL REFERENCES envelopes(id),
  "expense_description" varchar(255) NOT NULL,
  expense_amount_usd money NOT NULL,
  "changed_by" varchar(255) NOT NULL,
  "changed_at" timestamp NOT NULL DEFAULT (now())
);

CREATE INDEX ON "expenses" ("envelope_id");